# airport-tracking

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  project_diagram.drawio  pyproject.toml
dashboard/: .dockerignore  Dockerfile  app.py  local_app.py  pyproject.toml
dashboard/assets/: style.css
dashboard/components/callbacks/: airplane_cb.py  airports_cb.py  graphs_cb.py  maps_cb.py  register_callbacks.py  schedule_cb.py
dashboard/components/callbacks/local/: airplane_cb.py  airports_cb.py  graphs_cb.py  maps_cb.py  schedule_cb.py
src/: .dockerignore  main.py
src/api/: api_base.py  api_calls.py  utils.py
src/api/endpoints/v1/: airport_endpoint.py  api_routers.py
src/api/endpoints/v2/: airplane_endpoint.py  airport_endpoint.py  ep_airplane.py  ep_airport.py  ep_schedule.py  schedule_endpoint.py
src/api/endpoints/v3/: airplane_endpoint.py  schedule_endpoint.py
src/database/: db_base.py  db_config.py  db_operations.py  db_schema.py
src/endpoints/: ep_airplane.py  ep_airport.py  ep_schedule.py
src/endpoints/v1/: ep_airplane_api.py  ep_airport_api.py  ep_schedule_api.py
src/models/: airplane.py  airport.py  schedule.py
src/storage/: base.py  json_storage.py  utils.py
